fix: katex overflow

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1403,3 +1403,11 @@ strong {
 table {
     color: var(--global-text-color) !important;
 }
+
+// Fix katex overflow
+.post .katex-display {
+    display: inline-grid;
+    overflow-x: auto;
+    overflow-y: hidden;
+    max-width: 100%;
+}
